--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <ul>
         <li><a herf="home.html">Home</a></li>
         <li><a herf="login.html">Login</a></li>
-        <li><a herf="register.html">Register</a></li>
+        <li><a herf="register.php">Register</a></li>
     </ul>
 </body>
 </html>
