--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
         <title> Login Form</title>
     </head>
     <body>
+        <center>
         <form method="post" action="login.php">
             Enter username : <br>
             <input type="text" name="username" placeholder="username"><br>
@@ -13,5 +14,6 @@
             <br><br>
             <a href="register.php">Not A User? Register</a>
         </form>
+        </center>
     </body>
 </html>
