--- a/menu.html
+++ b/menu.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <ul>
-        <li><a herf="home.html">Home</a></li>
-        <li><a herf="login.html">Login</a></li>
-        <li><a herf="register.php">Register</a></li>
+        <li><a href="home1.html" target="frame2" >Home</a></li>
+        <li><a href="login.html" target="frame2">Login</a></li>
+        <li><a href="register.php" target="frame2">Register</a></li>
     </ul>
 </body>
 </html>
