--- a/menu.html
+++ b/menu.html
@@ -6,10 +6,13 @@
     <title>Menu</title>
 </head>
 <body>
+    <h1>asdasd</h1>
     <ul>
         <li><a href="home1.html" target="frame2" >Home</a></li>
         <li><a href="login.html" target="frame2">Login</a></li>
         <li><a href="register.php" target="frame2">Register</a></li>
+        <li><a href="update.php" target="frame2">Update</a></li>
     </ul>
+    
 </body>
 </html>
