--- a/home1.html
+++ b/home1.html
@@ -8,8 +8,8 @@
 <body>
     <center><h1> CET STUDENT PORTAL</h1></center>
     <hr>
-    <h1> WELCOME STUDENT!</h1>
-    <h2> This is a website curated for the students of CET. </h2>
+    <h1> WELCOME TEACHER! </h1>
+    This is a website curated for the management of the students of CET.
 
 </body>
 </html>
