--- a/menu.html
+++ b/menu.html
@@ -6,12 +6,16 @@
     <title>Menu</title>
 </head>
 <body>
-    <h1>asdasd</h1>
+    <h1><U>MENU</U></h1>
     <ul>
         <li><a href="home1.html" target="frame2" >Home</a></li>
-        <li><a href="login.html" target="frame2">Login</a></li>
-        <li><a href="register.php" target="frame2">Register</a></li>
-        <li><a href="update.php" target="frame2">Update</a></li>
+        <li><a href="register.php" target="frame2">Register Teacher</a></li>
+        <li><u>Student</u>
+        <ul><li><a href="registerstu.php" target="frame2">Register Student</a></li>
+            <li><a href="insertm.php" target="frame2">Insert Marks</a></li>
+            <li><a href="update.php" target="frame2">Update Marks</a></li>
+        </ul>
+        </li>
     </ul>
     
 </body>
