--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             <input type="submit" name="submit" value="Login">
             <input type="reset" name="reset">
             <br><br>
-            <a href="register.php">Not A User? Register</a>
+            <a href="register.php">Not A Teacher? Register</a>
         </form>
         </center>
     </body>
