added and fixed

--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,8 @@
         <ul><li><a href="registerstu.php" target="frame2">Register Student</a></li>
             <li><a href="insertm.php" target="frame2">Insert Marks</a></li>
             <li><a href="update.php" target="frame2">Update Marks</a></li>
+            <li><a href="internal.php" target="frame2">Calculate Internal</a></li>
+            <li><a href="printall.php" target="frame2">Display Students</a></li>
         </ul>
         </li>
     </ul>
